--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">app</string>
     <string-array name="dotAuthorizationKey">
-        <item name="usdMode">1</item>
+        <item name="useMode">1</item>
         <item name="domain">http://collector.naver.wisetracker.co.kr/</item>
         <!--<item name="domain">http://125.209.214.9/</item> release domain -->
         <item name="serviceNumber">103</item>
