--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
         <item name="useMode">1</item>
         <item name="domain">http://rw-collector-env.ap-northeast-2.elasticbeanstalk.com</item>
         <!--<item name="domain">http://125.209.214.9/</item> release domain -->
-        <item name="serviceNumber">103</item>
+        <item name="serviceNumber">102</item>
         <item name="expireDate">14</item>
         <item name="isDebug">true</item>
         <item name="isInstallRetention">true</item>
         <item name="isFingerPrint">true</item>
-        <item name="accessToken">sdflkjwoijfoaiejfoawiejfowaijfwoijefoiwj</item>
+        <item name="accessToken"></item>
         <item name="domain_x">http://report.wisetracker.co.kr/</item>
     </string-array>
     <string-array name="customKeyList">
